Updating to add closure support and improving definition collection to be a core part of runtime generation

--- a/ZScript/ZScript.csproj
+++ b/ZScript/ZScript.csproj
@@ -43,23 +43,48 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CodeGeneration\Tokenizers\Statements\BreakStatementTokenizer.cs" />
-    <Compile Include="CodeGeneration\Tokenizers\Statements\ContinueStatementTokenizer.cs" />
-    <Compile Include="CodeGeneration\Tokenizers\Statements\ForStatementTokenizer.cs" />
-    <Compile Include="CodeGeneration\Tokenizers\Statements\IfStatementTokenizer.cs" />
-    <Compile Include="CodeGeneration\Tokenizers\Helpers\JumpToken.cs" />
-    <Compile Include="CodeGeneration\Tokenizers\Helpers\JumpTokenExpander.cs" />
-    <Compile Include="CodeGeneration\Tokenizers\Helpers\JumpTargetToken.cs" />
-    <Compile Include="CodeGeneration\Tokenizers\Statements\PostfixExpressionTokenizer.cs" />
-    <Compile Include="CodeGeneration\Tokenizers\FunctionBodyTokenizer.cs" />
-    <Compile Include="CodeGeneration\Tokenizers\Statements\StatementTokenizerContext.cs" />
-    <Compile Include="CodeGeneration\Tokenizers\Statements\VariableDeclarationStatementTokenizer.cs" />
-    <Compile Include="CodeGeneration\Tokenizers\Statements\WhileStatementTokenizer.cs" />
-    <Compile Include="Elements\FunctionDef.cs" />
+    <Compile Include="CodeGeneration\Analysis\DefinitionScope.cs" />
+    <Compile Include="CodeGeneration\Elements\ClosureDefinition.cs" />
+    <Compile Include="CodeGeneration\Elements\Definition.cs" />
+    <Compile Include="CodeGeneration\DefinitionsCollector.cs" />
+    <Compile Include="CodeGeneration\Elements\ExportFunctionDefinition.cs" />
+    <Compile Include="CodeGeneration\Elements\Expression.cs" />
+    <Compile Include="CodeGeneration\Elements\FunctionArgumentDefinition.cs" />
+    <Compile Include="CodeGeneration\Elements\FunctionDefinition.cs" />
+    <Compile Include="CodeGeneration\Elements\GlobalVariableDefinition.cs" />
+    <Compile Include="CodeGeneration\Analysis\ScopeAnalyzer.cs" />
+    <Compile Include="CodeGeneration\Elements\TypeDef.cs" />
+    <Compile Include="CodeGeneration\Elements\ValueHolderDefinition.cs" />
+    <Compile Include="CodeGeneration\Analysis\VariableUsageAnalyzer.cs" />
+    <Compile Include="CodeGeneration\Messages\CodeError.cs" />
+    <Compile Include="CodeGeneration\Tokenization\Helpers\VariableToken.cs" />
+    <Compile Include="CodeGeneration\Tokenization\Helpers\VariableTokenExpander.cs" />
+    <Compile Include="CodeGeneration\Tokenization\Statements\BreakStatementTokenizer.cs" />
+    <Compile Include="CodeGeneration\Tokenization\Statements\ContinueStatementTokenizer.cs" />
+    <Compile Include="CodeGeneration\Tokenization\Statements\ForStatementTokenizer.cs" />
+    <Compile Include="CodeGeneration\Tokenization\Statements\IfStatementTokenizer.cs" />
+    <Compile Include="CodeGeneration\Tokenization\Helpers\JumpToken.cs" />
+    <Compile Include="CodeGeneration\Tokenization\Helpers\JumpTokenExpander.cs" />
+    <Compile Include="CodeGeneration\Tokenization\Helpers\JumpTargetToken.cs" />
+    <Compile Include="CodeGeneration\Tokenization\Statements\PostfixExpressionTokenizer.cs" />
+    <Compile Include="CodeGeneration\Tokenization\FunctionBodyTokenizer.cs" />
+    <Compile Include="CodeGeneration\Tokenization\Statements\ReturnStatementTokenizer.cs" />
+    <Compile Include="CodeGeneration\Tokenization\Statements\StatementTokenizerContext.cs" />
+    <Compile Include="CodeGeneration\Tokenization\Statements\SwitchStatementTokenizer.cs" />
+    <Compile Include="CodeGeneration\Tokenization\Statements\VariableDeclarationStatementTokenizer.cs" />
+    <Compile Include="CodeGeneration\Tokenization\Statements\WhileStatementTokenizer.cs" />
+    <Compile Include="Elements\ValueHolding\FunctionArgument.cs" />
+    <Compile Include="Elements\ValueHolding\GlobalVariable.cs" />
+    <Compile Include="Elements\ZClosureFunction.cs" />
+    <Compile Include="Elements\ZExportFunction.cs" />
+    <Compile Include="Elements\ZFunction.cs" />
     <Compile Include="CodeGeneration\Messages\CodeMessage.cs" />
     <Compile Include="Elements\Token.cs" />
     <Compile Include="Elements\TokenFactory.cs" />
     <Compile Include="Elements\TokenList.cs" />
+    <Compile Include="Elements\ValueHolding\ValueHolder.cs" />
+    <Compile Include="Elements\ValueHolding\Variable.cs" />
+    <Compile Include="Parsing\ConstantAtomParser.cs" />
     <Compile Include="Parsing\ValueParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Parsing\ANTLR\ZScriptBaseListener.cs" />
@@ -67,12 +92,14 @@
     <Compile Include="Parsing\ANTLR\ZScriptListener.cs" />
     <Compile Include="Parsing\ANTLR\ZScriptParser.cs" />
     <Compile Include="Runtime\Execution\FunctionVM.cs" />
+    <Compile Include="Runtime\Execution\VirtualMemory\IntegerMemory.cs" />
     <Compile Include="Runtime\Typing\ITypeOperator.cs" />
     <Compile Include="Runtime\Execution\VirtualMemory\IMemory.cs" />
     <Compile Include="Runtime\Execution\VirtualMemory\Memory.cs" />
     <Compile Include="Runtime\Execution\VirtualMemory\MemoryMapper.cs" />
     <Compile Include="Runtime\Execution\VmContext.cs" />
     <Compile Include="Runtime\IRuntimeOwner.cs" />
+    <Compile Include="Runtime\Typing\Operators\DoubleOperator.cs" />
     <Compile Include="Runtime\Typing\Operators\FloatOperator.cs" />
     <Compile Include="Runtime\Typing\Operators\IntegerOperator.cs" />
     <Compile Include="Runtime\Typing\Operators\LongOperator.cs" />
